# esp32-pwm-controller

./: .gitignore  CMakeLists.txt  Dockerfile  LICENSE  README.md  compose.yaml  sdkconfig.defaults
components/testable/: CMakeLists.txt
components/testable/test/: CMakeLists.txt  test_acfan.cpp  test_mean2.c
main/: AacFanMotor.cpp  AacFanMotor.h  CMakeLists.txt  CMotorDrive.cpp  CMotorDrive.h  CSineWaveHelper.cpp  CSineWaveHelper.h  Kconfig.projbuild  acmotor_defs.h  app-main.cpp  consolexec.cpp  consolexec.h  cpp_pthread.cpp  esp-wifi-ctrl.c  esp-wifi-ctrl.h  idf_component.yml  pwm-fanctrl.cpp  pwmconexec.cpp  pwmconexec.h  pwmconhelp.cpp  pwmconhelp.h  pwmctrl.cpp  pwmctrl.h  wifi-ctrl.cpp  wifi-ctrl.h
test/: CMakeLists.txt  pytest_test.py  sdkconfig.defaults
test-app/: CMakeLists.txt  README.md  compose.yaml  sdkconfig.defaults
test-app/main/: CMakeLists.txt  CTestAacFanMotor.cpp  CTestAacFanMotor.h  idf_component.yml  test_acfan.cpp  utest-app.cpp
